--- a/src/app/player-table/player-table.component.html
+++ b/src/app/player-table/player-table.component.html
@@ -32,7 +32,7 @@
                         <th>{{player.nationality}}</th>
                         <th>{{player.leftHanded}}</th>
                         <th>
-                            <button>Edit</button>
+                            <button class="">Edit</button>
                             <button>Delete</button>
                         </th>
                     </tr>
@@ -40,3 +40,4 @@
         </table>
     </div>
 </section>
+<app-player-dialog></app-player-dialog>
