--- a/src/app/player-table/player-table.component.html
+++ b/src/app/player-table/player-table.component.html
@@ -32,7 +32,7 @@
                         <th>{{player.nationality}}</th>
                         <th>{{player.leftHanded}}</th>
                         <th>
-                            <button class="">Edit</button>
+                            <button class="submt" (click)="editPlayer(player)">Edit</button>
                             <button>Delete</button>
                         </th>
                     </tr>
@@ -40,4 +40,4 @@
         </table>
     </div>
 </section>
-<app-player-dialog></app-player-dialog>
+<app-player-dialog *ngIf="showModal" [player]="selectedPlayer" (closeDialog)="closeDialog()"></app-player-dialog>
