--- a/src/styles.scss
+++ b/src/styles.scss
@@ -190,6 +190,8 @@ body {
   font: 600 18px/1.5 -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
   background-color: #f69d75;
   color: #555555;
+}.dialog-window {
+  border-radius: 20px;
 }
 
 a {
