App working, can add, edit and delete

--- a/src/app/player-table/player-table.component.html
+++ b/src/app/player-table/player-table.component.html
@@ -34,7 +34,7 @@
             <th>{{player.leftFooted}}</th>
             <th>
                 <button class="submit" (click)="editPlayer(player)">Edit</button>
-                <button>Delete</button>
+                <button class="submit" (click)="deletePlayer(player)">Delete</button>
               </th>
           </tr>
       </tbody>
